--- a/index.html
+++ b/index.html
@@ -1,56 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Calculator</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Calculator</title>
+  <link href="styles.css" rel="stylesheet">
+  <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="container">
-        <div class="calculator dark">
-            <div class="theme-toggler active" title="Toggle Theme">
-                <i class="toggler-icon"></i>
-            </div>
-            <div class="display-screen">
-                <div id="display"></div>
-            </div>
-            <div class="buttons">
-                <table>
-                    <tr>
-                        <td><button class="btn-operator" id="clear" title="Clear">C</button></td>
-                        <td><button class="btn-operator" id="/" title="Divide">&divide;</button></td>
-                        <td><button class="btn-operator" id="*" title="Times">&times;</button></td>
-                        <td><button class="btn-operator" id="backspace" title="Backspace"><</button></td>
-                    </tr>
-                    <tr>
-                        <td><button class="btn-number" id="7" title="7">7</button></td>
-                        <td><button class="btn-number" id="8" title="8">8</button></td>
-                        <td><button class="btn-number" id="9" title="9">9</button></td>
-                        <td><button class="btn-operator" id="-" title="Minus">-</button></td>
-                    </tr>
-                    <tr>
-                        <td><button class="btn-number" id="4" title="4">4</button></td>
-                        <td><button class="btn-number" id="5" title="5">5</button></td>
-                        <td><button class="btn-number" id="6" title="6">6</button></td>
-                        <td><button class="btn-operator" id="+" title="Plus">+</button></td>
-                    </tr>
-                    <tr>
-                        <td><button class="btn-number" id="1" title="1">1</button></td>
-                        <td><button class="btn-number" id="2" title="2">2</button></td>
-                        <td><button class="btn-number" id="3" title="3">3</button></td>
-                        <td rowspan="2"><button class="btn-equal" id="equal" title="Equal">=</button></td>
-                    </tr>
-                    <tr>
-                        <td><button class="btn-operator" id="(" title="(">(</button></td>
-                        <td><button class="btn-number" id="0" title="0">0</button></td>
-                        <td><button class="btn-operator" id=")" title=")">)</button></td>
-                    </tr>
-                </table>
-            </div>
-        </div>
+  <div class="calculator-grid">
+    <div class="output">
+      <div data-previous-operand class="previous-operand"></div>
+      <div data-current-operand class="current-operand"></div>
     </div>
-    <script src="script.js"></script>
+    <button data-all-clear class="span-two">AC</button>
+    <button data-delete>DEL</button>
+    <button data-operation>÷</button>
+    <button data-number>1</button>
+    <button data-number>2</button>
+    <button data-number>3</button>
+    <button data-operation>*</button>
+    <button data-number>4</button>
+    <button data-number>5</button>
+    <button data-number>6</button>
+    <button data-operation>+</button>
+    <button data-number>7</button>
+    <button data-number>8</button>
+    <button data-number>9</button>
+    <button data-operation>-</button>
+    <button data-number>.</button>
+    <button data-number>0</button>
+    <button data-equals class="span-two">=</button>
+  </div>
 </body>
 </html>
